@@ -1,5 +1,15 @@
 2008-12-05  Neil Roberts  <neil@linux.intel.com>
 
+	* clutter/clutter-timeline.c:
+	* clutter/clutter-texture.c:
+	* clutter/clutter-stage.c:
+	* clutter/clutter-label.c:
+	* clutter/clutter-behaviour-path.c:
+	* clutter/clutter-actor.c: Fix the 'Since' annotation in the
+	gtk-doc.
+
+2008-12-05  Neil Roberts  <neil@linux.intel.com>
+
 	Bug 1252 - Merge ClutterBehaviourPath and ClutterBehaviourBspline
 
 	* clutter/clutter-path.h:
